[package]
name = "add_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Adding dependencies here. If another package in the workspace has similar
# dependencies, then it will be resolved in the workspace's Cargo.lock.
[dependencies]
rand = "0.8.5"
